@@ -1412,6 +1412,10 @@ struct tree_constructor GTY(())
   		TREE_OPERAND (GOMP_CLAUSE_COPYIN_CHECK (NODE), 0)
 #define GOMP_COPYPRIVATE_VARS(NODE)	\
   		TREE_OPERAND (GOMP_CLAUSE_COPYPRIVATE_CHECK (NODE), 0)
+#define GOMP_IF_EXPR(NODE)		\
+  		TREE_OPERAND (GOMP_CLAUSE_IF_CHECK (NODE), 0)
+#define GOMP_NUM_THREADS_EXPR(NODE)	\
+  		TREE_OPERAND (GOMP_CLAUSE_NUM_THREADS_CHECK (NODE), 0)
 
 
 struct tree_exp GTY(())
