@@ -1,3 +1,7 @@
+2005-09-23  Diego Novillo  <dnovillo@redhat.com>
+
+	* testsuite/libgomp.dg/omp-parallel-if.c: New test.
+
 2005-09-22  Richard Henderson  <rth@redhat.com>
 
 	* critical.c (GOMP_critical_name_start): Change argument to void**.
